# voice_bridge_be

./: .gitignore  Dockerfile  LICENSE  README.md  custom_postgresql.conf  custom_postgresql_test.conf  docker-compose-run.ps1  docker-compose.yaml  pyproject.toml  run-stack.bat
migrations/: env.py
src/voice_bridge_be/: __init__.py  common.py  main.py
src/voice_bridge_be/database/: request_models.py  response_models.py  table_models.py
src/voice_bridge_be/routes/: audio_transcript.py  speech_to_text_rev_ai.py  stt_tts_single_route.py  text_to_speach_eleven_labs.py  voice_to_voice.py
src/voice_bridge_be/services/: text_to_speach_el.py  voice_transcription.py
