[project]
name = "voice-bridge-be"
version = "0.1.0"
description = ""
authors = [
    {name = "marijavuk",email = "marija.vukadinovic.86@gmail.com"}
]
readme = "README.md"
packages = [{include = "voice_bridge_be", from = "src"}]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "openai (>=1.96.1,<2.0.0)",
    "poetry-core (>=2.0.0,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "websockets (==11.0)",
    "elevenlabs (>=2.7.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "rev-ai (>=2.21.0,<3.0.0)",
    "certifi (>=2025.10.5,<2026.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "resampy (>=0.4.3,<0.5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
